# hwpx-proposal-automation

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.jules/: bolt.md
docs/: architecture.md  hwpx-format-guide.md  style-system.md  table-pagebreak.md  troubleshooting.md
docs/knowhow/: bullet-dedup.md  com-api-pitfalls.md  namespace-corruption.md  style-remapper.md
examples/: example-content.md  inserts_example.json  style_config_example.yaml
scripts/: __init__.py  analyze_template.py  enhance_hwpx.py  extract_pdf.py  extract_ppt.py  fix_namespaces.py  md_to_hwpx.py  verify_hwpx.py  write_hwpx.py
scripts/hwpx_editor/: __init__.py  table_fixer.py
skills/hwpx-proposal/: SKILL.md
skills/proposal-analyzer/: SKILL.md
skills/proposal-architect/: SKILL.md
skills/proposal-reviewer/: SKILL.md
skills/proposal-writer/: SKILL.md
templates/: .gitkeep
workflows/: write-proposal.md
