[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hwpx-proposal-automation"
version = "1.0.0"
description = "Automate Korean government proposal generation in HWPX (Hancom Office) format using AI agents and Python scripts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["hwpx", "hancom", "proposal", "automation", "korean", "document"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: XML",
    "Natural Language :: Korean",
]

dependencies = [
    "python-hwpx>=0.2.0",
    "lxml>=4.9.0",
    "pdfplumber>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/hwpx-proposal-automation"
Issues = "https://github.com/yourusername/hwpx-proposal-automation/issues"

[tool.setuptools.packages.find]
include = ["scripts*"]
